munit/v/1.2/assertion-message-processor.adoc
= 断言消息处理器
：version-info：3.7.0及更高版本
:keywords: mule, esb, tests, qa, quality assurance, verify, functional testing, unit testing, stress testing

== 概述

由MUnit提供的Assert功能允许开发人员运行_assertions_以验证Mule消息内容的状态。

下面列出的所有消息处理器都可用于在生产代码运行后验证Mule消息，或作为MUnit Spy消息处理器的一部分。

提示：每个MUnit Assertion消息处理器都包含一个属性消息。建议填充此可选属性以便轻松识别失败的断言。

== 声明有效负载

`assert-payload-equals`消息处理器验证Mule消息的有效载荷等于期望值。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assertion1.png[assertion1]
....
[tab,title="XML or Standalone Editor"]
....
[source,xml,linenums]
----
<munit:assert-payload-equals message="oops!" expectedValue="'#[['value 1','value 2']]"/>
----
....
------

[%header%autowidth.spread]
|===
|属性名称 |描述

| `message`
|断言失败时打印的错误消息。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

| `expectedValue`
|比较有效负载的值。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

|===

如果断言失败，则消息处理器将抛出`java.lang.AssertionError`。

提示：如果您希望将有效负载与Spring bean进行比较，则可以使用MUnit MEL函数`getBeanFromMuleContext('bean_name')`。此函数检查Mule注册表，并返回具有匹配名称的bean（如果存在）。


== 断言空

`assert-null`消息处理器验证Mule消息的有效载荷是`NullPayload`。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assert-null.png[assert-null]
....
[tab,title="XML or Standalone Editor"]
....
[source,xml,linenums]
.assert-null example
----
<munit:assert-null message="oops!"/>
----
....
------


[%header%autowidth.spread]
|===
|属性名称 |描述

| `message`
|定义在断言失败时要打印的错误消息。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

|===

如果断言失败，则消息处理器将抛出`java.lang.AssertionError`。

== 断言不为空

`assert-not-null`消息处理器验证Mule消息的有效载荷是_not_ `NullPayload`。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assert-not-null.png[assert-not-null]
....
[tab,title="XML or Standalone Editor"]
....
[source,xml,linenums]
----
<munit:assert-not-null message="oops!"/>
----
....
------


[%header%autowidth.spread]
|===
|属性名称 |描述

| `message`
|定义在断言失败时要打印的错误消息。它接受MEL表达式。如果留作
字面上，它假定一个字符串值。

|===

如果断言失败，则消息处理器将抛出`java.lang.AssertionError`。

== 声明等于

`assert-on-equals`消息处理器验证两个对象之间的相等性。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assert-on-equals.png[assert-on-equals]
....
[tab,title="XML or Standalone Editor"]
....
[source,xml,linenums]
----
<munit:assert-on-equals message="oops!" expectedValue="#['expected']" actualValue="#['actual_value']"/>
----
....
------

[%header%autowidth.spread]
|===
|属性名称 |描述

| `message`
|定义在断言失败时要打印的错误消息。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

| `expectedValue`
|定义预期对象的值。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

| `actualValue`
|定义我们正在验证的实际值。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

|===

如果断言失败，则消息处理器将抛出`java.lang.AssertionError`。

== 声明不等于

`assert-not-same`消息处理器验证两个对象是否不同。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assert-not-same.png[assert-not-same]
....
[tab,title="XML or Standalone Editor"]
....
[source,xml,linenums]
----
<munit:assert-not-same message="oops!" expectedValue="#['']" actualValue="#[payload]"/>
----
....
------

[%header%autowidth.spread]
|===
|属性名称	|描述

| `message`
|定义在断言失败时要打印的错误消息。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

| `expectedValue`
|定义预期对象的值。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

| `actualValue`
|定义我们正在验证的实际值。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

|===

如果断言失败，则消息处理器将抛出`java.lang.AssertionError`。


== 断言False

`assert-false`消息处理器验证布尔表达式的结果是_false_。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assert-false.png[assert-false]
....
[tab,title="XML or Standalone Editor"]
....
[source,xml,linenums]
----
<munit:assert-false  message="oops!" condition="#[ 1 != 1 || payload.length != 0]"/>
----
....
------


[%header%autowidth.spread]
|===
|属性名称 |描述

| `message`
|定义在断言失败时要打印的错误消息。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

| `condition`
|定义您要验证的表达式。

|===

如果断言失败，则消息处理器将抛出`java.lang.AssertionError`。

== 声明为真

`assert-true`消息处理器验证布尔表达式的结果是_true_。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assert-true.png[assert-true]
....
[tab,title="XML or Standalone Editor"]
....
[source,xml,linenums]
----
<munit:assert-true message="oops!" condition="#[#[ 1 == 1 &amp;&amp; payload.length == 0]]" doc:name="Assert True"/>
----
....
------

[%header%autowidth.spread]
|===
|属性名称 |描述

| `message`
|定义在断言失败时要打印的错误消息。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

| `condition`
|定义您要验证的表达式。

|===

如果断言失败，则消息处理器将抛出`java.lang.AssertionError`。


=== 单元实用MEL函数

您可以通过将其与MUnit实用MEL函数（一组帮助验证Mule消息状态的MEL表达式）结合使用，大大增强Assert True消息处理器的功能。

==== 消息属性查找器

这些函数通过名称验证某个消息属性的存在。它们在消息属性的值不相关的情况下特别有用，但您需要验证该属性是由您正在测试的流创建的。

[%header%autowidth.spread]
|===
|功能  |说明

| `messageHasproperty is foundInAnyScopeCalled(propertyName)`
|如果找到_any scope_中提供名称的属性，则返回true。

| `messageHasInboundproperty is foundCalled(propertyName)`
|如果找到具有所提供名称的_inbound_属性，则返回true。

| `messageHasOutboundproperty is foundCalled(propertyName)`
|如果找到具有所提供名称的_outbound_属性，则返回true。

| `messageHasSessionproperty is foundCalled(propertyName)`
|如果找到具有所提供名称的_session_属性，则返回true。

| `messageHasInvocationproperty is foundCalled(propertyName)`
|如果找到具有提供名称的_invocation_属性，则返回true。

| `messageHasInboundAttachmentCalled(property is foundName)`
|如果找到具有提供名称的_inbound attachment_属性，则返回true。

| `messageHasOutboundAttachmentCalled(property is foundName)`
|如果找到具有所提供名称的_outbound attachment_属性，则返回true。

|===


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assert-true-properties.png[assert-true-properties]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<munit:assert-true condition="#[messageHasPropertyInAnyScopeCalled('my_property')]"/>
<munit:assert-true condition="#[messageHasInvocationPropertyCalled('another_property')]"/>
----
....
------

==== 其他MEL函数

[%header%autowidth.spread]
|===
|功能  |说明

| `getBeanFromMuleContext('bean_name')`
|检查Mule注册表，并返回具有匹配名称的bean（如果存在）。

|===

== 故障
如果您想故意失败，请使用`fail`消息处理器，例如，以验证不应发生特定事件。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:assert-fails.png[assert-fails]
....
[tab,title="XML or Standalone Editor"]
....
[source,xml,linenums]
----
<munit:fail message="This should not happen"/>
----
....
------

[%header%autowidth.spread]
|===
|属性名称 |描述

| `message`
|定义断言失败时打印的错误消息。它接受MEL表达式。如果保留为文字，它会假设一个字符串值。

|===

== 定义自定义断言

如果需要更具体的断言，MUnit允许您扩展断言消息处理器的库，并因此定义您自己的自定义断言。

=== 定义自定义断言实现

要实现自定义断言，您需要实现接口`org.mule.munit.MunitAssertion`。

[source,java,linenums]
。自定义示例
----
package your.package;

public class CustomAssertion implements MunitAssertion{
  @Override
  public MuleEvent execute(MuleEvent muleEvent) throws AssertionError {   //<1>
    if ( !muleEvent.getMessage().getPayload().equals("Hello World") ){    //<2>
      throw new AssertionError("Error the payload is incorrect");
    }

  return muleEvent;                                                       //<3>

  }
}
----
<1>实现接口`public MuleEvent execute(MuleEvent muleEvent) throws AssertionError`中的唯一方法。
<2>运行您的自定义逻辑，在这种情况下验证消息的有效负载是`Hello World`。
<3>如果验证通过，则返回相同的事件。

警告：小心执行自定义断言，因为修改消息负载或变量可能会影响测试中的后续断言。正常的MUnit断言保证这不会发生，除非指定。

=== 定义自定义断言消息处理器

在定义了自定义断言之后，使用`run-custom`消息处理器来运行它。 +
您需要将您的自定义断言定义为一个bean。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
Navigate to the *Global Elements* tab from your test Suite, click *Create*, select *Bean* and configure your custom bean assertion

image:custom-bean-assertion.png[custom-bean-assertion]

image:assert-custom-assertion.png[assert-custom-assertion]

[%header%autowidth.spread]
|===
|Attribute Name |Description

|`assertion-ref`
|Defines the custom assertion instance to run.

|===

....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<spring:beans>    //<1>
  <spring:bean class="your.package.CustomAssertion" name="customAssertion"/>
</spring:beans>
...
<munit:test name="testCustomAssertion" description="run custom assertion test">
    <munit:run-custom assertion-ref="customAssertion"/> //<2>
</munit:test>
----
<1> Define custom assertion bean.
<2> Run custom assertion using bean name.

[%header%autowidth.spread]
|===
|Attribute Name |Description

|`assertion-ref`
|Defines the custom assertion instance to run.

|===

....
------

警告：`run-custom`消息处理器在发生故障时不允许定义错误消息。这由自定义断言实现来处理。

使用Java代码定义断言== 

MUnit断言基于JUnit断言，因此没有新的Java API。

要在基于Java的MUnit Test中定义断言，只需要导入JUnit Assert库。 MUnit不提供Java断言库。
